// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`periodic-refresh Renders \`periodic-refresh\` with custom props 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      class="widget-settings-item-title"
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        <div
          class="validation-header"
        >
          Periodic refresh
        </div>
        <div
          class="font-italic caption ml-1"
        >
          <span>
            (common.optional)
          </span>
          <!---->
        </div>
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <periodic-refresh-field-stub
          label=""
          name="customName"
          periodicrefresh="[object Object]"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`periodic-refresh Renders \`periodic-refresh\` with default props 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      class="widget-settings-item-title"
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        <div
          class="validation-header"
        >
          Periodic refresh
        </div>
        <div
          class="font-italic caption ml-1"
        >
          <span>
            (common.optional)
          </span>
          <!---->
        </div>
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <periodic-refresh-field-stub
          label=""
          name="periodic_refresh"
          periodicrefresh="[object Object]"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`periodic-refresh Renders \`periodic-refresh\` with errors 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      class="widget-settings-item-title"
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        <div
          class="validation-header error--text"
        >
          Periodic refresh
        </div>
        <div
          class="font-italic caption ml-1"
        >
          <span>
            (common.optional)
          </span>
          <!---->
        </div>
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <periodic-refresh-field-stub
          label=""
          name="custom-name"
          periodicrefresh="[object Object]"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;
